# CCereal

./: CMakeLists.txt
CCerealSource/include/: serializer.h
CCerealSource/src/: serializer.c
CCerealSource/tools/: meta_generator.py
